@@ -1,3 +1,9 @@
+2001-07-25  Richard Hestilow  <hestilow@ximian.com:
+
+	* prefs-widget.c (read_preferences): Swap right and left enable.
+	  (left_handed_selected_cb): Ditto.
+	  (right_handed_selected_cb): Ditto. 
+
 2001-07-20  Chema Celorio  <chema@celorio.com>
 
 	* RELEASE : 1.5.0
